# langchain-practice

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
src/components/langchain/: 01_init_mode.py  02_call_tools.py  03_structured_output.py
src/integration_pracetice/langchain/: 04_practice_build_search_engine.py
src/integration_pracetice/langgraph/: 01_practice_chatbot.py
src/langchain/: 01_practice_verify_env.py  02_practice_simple_llm.py  03_practice_simple_llm_prompt.py  05_practice_classify_text_into_labels.py
src/langgraph/: 02_practice_end_to_end_agent.py  03_practice_retrieval_augmented_generation_app.py  04_practice_sql_agent.py
